added last to the last

--- a/index.html
+++ b/index.html
@@ -139,18 +139,19 @@
       <!-- //3-->
      <div class="step" data-x="-28000" data-y="-15500" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="10">
         <div class="whiteborder">
+          Why are so distracted?
         </div>
       </div>
 
-
-     <div class="step" data-x="-28000" data-y="-15500" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="10">
+     <div class="step" data-x="-28000" data-y="-15500" data-rotate-x="90" data-rotate-y="0" data-rotate-z="0" data-scale="10">
         <div class="whiteborder">
+          Practice
         </div>
       </div>
 
-
-     <div class="step" data-x="-28000" data-y="-15500" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="10">
+     <div class="step" data-x="-28000" data-y="-15500" data-rotate-x="180" data-rotate-y="90" data-rotate-z="180" data-scale="10">
         <div class="whiteborder">
+          Keep a beginner's mind.
         </div>
       </div>
 
